--- a/mi pagina arte con clau/index.html.html
+++ b/mi pagina arte con clau/index.html.html
@@ -238,7 +238,30 @@
             &#x3C;/div>
         &#x3C;/div>
     &#x3C;/section>
+<section id="galeria" class="py-16 bg-gray-50">
+    <div class="container mx-auto px-6">
+        <div class="text-center mb-16">
+            <h2 class="text-4xl font-dancing font-bold text-gradient mb-4">Mi Galería</h2>
+            <p class="text-gray-600 max-w-2xl mx-auto">Una muestra de mis trabajos hechos con dedicación</p>
+        </div>
 
+        <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:transform hover:scale-105 transition-all">
+                <img src="https://ibb.co/4R52jC1q" alt="Trabajo 1" class="w-full h-64 object-cover">
+            </div>
+
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:transform hover:scale-105 transition-all">
+                <img src="https://ibb.co/FbRZksf9" alt="Trabajo 2" class="w-full h-64 object-cover">
+            </div>
+
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:transform hover:scale-105 transition-all">
+                <img src="https://ibb.co/xSHZTV5HI" alt="Trabajo 3" class="w-full h-64 object-cover">
+            </div>
+
+            </div>
+    </div>
+</section>
     &#x3C;!-- Contacto -->
     &#x3C;section id="contacto" class="py-16 bg-gray-50">
         &#x3C;div class="container mx-auto px-6">
